--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 	<body>
 		<h1>URL Shortener Microservice</h1>
 		<h2>Example Creation:</h2>
-		<code>https://fcc-paulbert-urlshort.herokuapp.com/new/http://www.google.com</code>
+		<code>https://fcc-paulbert-urlshort.herokuapp.com/new/http://www.google.com</code><br>
 		<code>https://fcc-paulbert-urlshort.herokuapp.com/new/https://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords=javascript</code>
 		<h2>Output:</h2>
 		<code>{"original_url":"https://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords=javascript","short_url":"https://fcc-paulbert-urlshort.herokuapp.com/ixtleoe2"}</code>
