--- a/views/index.html
+++ b/views/index.html
@@ -7,9 +7,9 @@
 		<code>https://fcc-paulbert-urlshort.herokuapp.com/new/http://www.google.com</code><br>
 		<code>https://fcc-paulbert-urlshort.herokuapp.com/new/https://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords=javascript</code>
 		<h2>Output:</h2>
-		<code>{"original_url":"https://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords=javascript","short_url":"https://fcc-paulbert-urlshort.herokuapp.com/ixtleoe2"}</code>
+		<code>{"original_url":"https://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords=javascript","short_url":"https://fcc-paulbert-urlshort.herokuapp.com/ixtm96m2"}</code>
 		<h2>This:</h2>
-		<code>https://fcc-paulbert-urlshort.herokuapp.com/ixtleoe2</code>
+		<code>https://fcc-paulbert-urlshort.herokuapp.com/ixtm96m2</code>
 		<h2>Will redirect to this:</h2>
 		<code>https://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords=javascript</code>
 		<footer><p>Created by <a href="http://www.github.com/paulbert" target="_blank">Paul Albert</a></p></footer>
